[gd_scene load_steps=4 format=2]

[ext_resource path="res://Imatges/Free/Menu/Buttons/Play.png" type="Texture" id=1]
[ext_resource path="res://Imatges/PNG/game_background_2/game_background_2.png" type="Texture" id=2]
[ext_resource path="res://Escenes/Interface.gd" type="Script" id=3]

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 499, 300 )
rotation = -0.00513913
scale = Vector2( 0.557896, 0.571021 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.996
margin_top = -52.7
margin_right = 52.996
margin_bottom = 52.7
rect_rotation = -0.270093
icon = ExtResource( 1 )
expand_icon = true

[node name="message" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -1026.0
margin_top = -492.0
margin_right = -1.0
margin_bottom = -251.0
rect_scale = Vector2( 3, 3 )
text = "Ninja Frog"
align = 1
valign = 1

[node name="message_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]
